Removed extra end tags and removed unused attribute

--- a/AD&D 2E Revised/2ESheet.html
+++ b/AD&D 2E Revised/2ESheet.html
@@ -202,7 +202,7 @@
     </tr>
 </table>
     <br>
-    <h4><b>Armor Type & Special Defenses:</b></h4><br><textarea name="attr_armortype" title="@{armortype}" width="20"></textarea>
+    <h4><b>Armor Type & Special Defenses:</b></h4><br><textarea name="attr_armortype" title="@{armortype}" ></textarea>
     <hr><br>
     <h4><b>Movement</b></h4><br>
         <input type="radio" name="attr_tab3" class="sheet-tab sheet-tab15" value="1" checked/><span class="sheet-tab sheet-tab15">Basic</span>&nbsp;
@@ -237,7 +237,7 @@
             <td><input type="text" name="attr_overlightspeed" title="@{overlightspeed}" class="sheet-short" value="(@{lightspeed}*3)" disabled/></td>
             <td><input type="text" name="attr_lightrun" title="@{lightrun}" class="sheet-short" value="(@{overlightspeed}*10)" disabled/></td>
             <td><input type="text" name="attr_lightweight" title="@{lightweight}" value="(@{carryweight}+round((@{maxpress}-@{carryweight})/4))" class="sheet-short" disabled/></td>
-            <td><input type="text" name="attr_lightpen" title="@{lightpen}" class="sheet-middle"/></td></td>
+            <td><input type="text" name="attr_lightpen" title="@{lightpen}" class="sheet-middle"/></td>
     </tr>
     <tr>
             <td class="sheet-default-header">Moderate</td>
@@ -300,7 +300,7 @@
             <td><input type="text" name="attr_barboverlightspeed" title="@{barboverlightspeed}" class="sheet-short" value="(@{barblightspeed}*3)" disabled></td>
             <td><input type="text" name="attr_barblightrun" title="@{barblightrun}" class="sheet-short" value="(@{barboverlightspeed}*10)" disabled/></td>
             <td><input type="text" name="attr_lightweight" title="@{lightweight}" value="[[@{carryweight}+round((@{maxpress}-@{carryweight})/4)]]" class="sheet-short" disabled/></td>
-            <td><input type="text" name="attr_lightpen" title="@{lightpen}" class="sheet-middle"/></td></td>
+            <td><input type="text" name="attr_lightpen" title="@{lightpen}" class="sheet-middle"/></td>
     </tr>
     <tr>
             <td class="sheet-default-header">Moderate</td>
@@ -351,13 +351,13 @@
             <td class="sheet-default-header">12/6</td>
             <td><input type="text" name="attr_12weight" title="@{12weight}" class="sheet-short"/></td>
             <td><input type="text" name="attr_12pen" title="@{12pen}" class="sheet-short"/></td>
-            <td><input type="text" name="attr_12movnotes"title="@{12movnotes}"/></td>
+            <td><input type="text" name="attr_12movnotes" title="@{12movnotes}"/></td>
     </tr>
     <tr>
             <td class="sheet-default-header">11/5</td>
             <td><input type="text" name="attr_11weight" title="@{11weight}" class="sheet-short"/></td>
             <td><input type="text" name="attr_11pen" title="@{11pen}" class="sheet-short"/></td>
-            <td><input type="text" name="attr_11movnotes" title="@{11movnotes}"/></td></td>
+            <td><input type="text" name="attr_11movnotes" title="@{11movnotes}"/></td>
     </tr>
     <tr>
             <td class="sheet-default-header">10/5</td>
