Fixed minor HTML errors

--- a/AD&D 2E Revised/2ESheet.html
+++ b/AD&D 2E Revised/2ESheet.html
@@ -1080,7 +1080,7 @@
             <td><input type="text" name="attr_conshock" title="@{conshock}" class="sheet-short" value="0"><button type="roll" name="roll_conshock-check" title="%{conshock-check}" value="/gmroll [[1d100cs<1cf>100+(?{Modifier})]]&le;[[@{conshock}]] [Con Shock]"></button></td>
             <td><input type="text" name="attr_conres" title="@{conres}" class="sheet-short" value="0"><button type="roll" name="roll_conres-check" title="%{conres-check}" value="/gmroll [[1d100cs<1cf>100+(?{Modifier?|0})]]&le;[[@{conres}]] [Con Res Survive]"></button></td>
             <td><input type="text" name="attr_conpoisonsave" title="@{conpoisonsave}" class="sheet-short" value="0"/></td>
-            <td><input type="text" name="attr_conregen" title="@{conregen}"class="sheet-short" value="0"/></td>
+            <td><input type="text" name="attr_conregen" title="@{conregen}" class="sheet-short" value="0"/></td>
             <td><input type="text" name="attr_connotes" title="@{connotes}"></td>
     </tr>
 </table>
@@ -3204,7 +3204,7 @@
             <td><input type="text" name="attr_turnedhd10" title="@{repeating_priestturntables_$X_turnedhd10}" class="sheet-sym" placeholder="9HD"></td>&nbsp;
             <td><input type="text" name="attr_turnedroll109" title="@{repeating_priestturntables_$X_turnedroll109}" class="sheet-short" placeholder="---"></td>
             <td><input type="text" name="attr_turnedroll110" title="@{repeating_priestturntables_$X_turnedroll110}" class="sheet-short" placeholder="---"></td>
-            <td><input type="text" name="attr_turnedroll111" title="@{repeating_priestturntables_$X_turnedroll111}" class="sheet-short" plaecholder="---"></td>
+            <td><input type="text" name="attr_turnedroll111" title="@{repeating_priestturntables_$X_turnedroll111}" class="sheet-short" placeholder="---"></td>
             <td><input type="text" name="attr_turnedroll112" title="@{repeating_priestturntables_$X_turnedroll112}" class="sheet-short" placeholder="---"></td>
             <td><input type="text" name="attr_turnedroll113" title="@{repeating_priestturntables_$X_turnedroll113}" class="sheet-short" placeholder="---"></td>
             <td><input type="text" name="attr_turnedroll114" title="@{repeating_priestturntables_$X_turnedroll114}" class="sheet-short" placeholder="20"></td>
