--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -2378,7 +2378,7 @@
 		<div class="sheet-box sheet-traits">
 
 			<!-- PERKS AREA -->
-			<div class="sheet-table half-size border">
+			<div class="sheet-table half-size border perks-area">
 
 				<div class="sheet-header">
 					<div class="sheet-cell sheet-col0">Perks</div>
@@ -2435,7 +2435,7 @@
 			<!-- END PERKS AREA -->
 			
 			<!-- QUIRKS AREA -->
-			<div class="sheet-table half-size">
+			<div class="sheet-table half-size quirks-area">
 				<div class="sheet-header">
 					<div class="sheet-cell sheet-col0">Quirks</div>
 					<div class="sheet-cell sheet-col1">
@@ -7794,7 +7794,7 @@ If you're using an unarmed parry, attacker may choose to hit the original target
 
 	var noop = function () {}; // do nothing callback function.
 
-	var version = "2.3.2.beta.4";
+	var version = "2.3.2";
 
 	var latestChangesDate = "04/14/2020";
 
