--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -29,6 +29,7 @@
 					<li>Combat Tab. Active Defenses. Hide checkbox when the Modify button is clicked. Reported by Charles.</li>
 					<li>Combat Tab. Active Defenses. Fix alignment issues. Verified on Chrome, Firefox, MS Edge (chromium)</li>
 					<li>General Tab. Current HP and Current FP tooltip. Thresholds were not updating when max HP or FP were updated. This should be fixed.</li>
+					<li>Traits Tab. Add some gutter space to perks and quirks tables.</li>
 				</ul>
 				<label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update</span></b></label>
 				<button type="action" name="act_view_updates_tab" class="reset">View All Updates</button>
@@ -6083,6 +6084,7 @@
 		<li>Combat Tab. Active Defenses. Hide checkbox when the Modify button is clicked. Reported by Charles.</li>
 		<li>Combat Tab. Active Defenses. Fix alignment issues. Verified on Chrome, Firefox, MS Edge (chromium)</li>
 		<li>General Tab. Current HP and Current FP tooltip. Thresholds were not updating when max HP or FP were updated. This should be fixed.</li>
+		<li>Traits Tab. Add some gutter space to perks and quirks tables.</li>
 	</ul>
 
 	<h4>Version: 2.3.1</h4>
