Better styling for Gear Stored on mount checkbox

--- a/AD&D 2E Revised/2ESheet.html
+++ b/AD&D 2E Revised/2ESheet.html
@@ -7010,27 +7010,40 @@
 </div></div>
 <br><h4><b>Gear Stored</b></h4>
     <table style='border-collapse: collapse; border-spacing: 0;'>
-    <tr>
-            <td style="background-color: #7C0303; color: #FFF; font-family: Arial, sans-serif; font-weight: bold; text-align:left;"> &nbsp;&nbsp;On &nbsp;&nbsp;&nbsp;Description<br>Mount</td>
-            <td class="sheet-default-header">Weight</td>
-            <td class="sheet-default-header"># Held</td>
-            <td class="sheet-default-header">Location</td>
+    <tr class="sheet-default-header">
+            <td class="sheet-centering">On<br>Mount</td>
+            <td>Description</td>
+            <td>Weight</td>
+            <td># Held</td>
+            <td>Location</td>
     </tr>
     <tr>
-            <td> &nbsp;&nbsp;&nbsp;<input type="checkbox" name="attr_on-mount" title="@{on-mount}" value="1" /><span></span>&nbsp;&nbsp;&nbsp;<input type="text" name="attr_gear-stored-desc" title="@{gear-stored-desc}" placeholder="Item Name" class="sheet-middle"></td>
+            <td class="sheet-centering"><label><input type="checkbox" name="attr_on-mount" title="@{on-mount}" value="1"/><span></span></label></td>
+            <td><input type="text" name="attr_gear-stored-desc" title="@{gear-stored-desc}" placeholder="Item Name" class="sheet-middle"></td>
             <td><input type="number" name="attr_gear-stored-weight" title="@{gear-stored-weight}" class="sheet-short" value="0" readonly></td>
             <td><input type="number" name="attr_gear-stored-qty" title="@{gear-stored-qty}" class="sheet-short" value="0"></td>
             <td><input type="text" name="attr_gear-stored-loc" title="@{gear-stored-loc}" placeholder="Location" class="sheet-middle"><input style="display: none;" name="attr_mountgearweighttotal" class="sheet-short" value="0"/></td>
     </tr>
 </table>
-<fieldset name="repeating_gear-stored" title="@{gear-stored}" class="repeating_gear-stored"><table style='border-collapse: collapse; border-spacing: 0;'>
+<fieldset name="repeating_gear-stored" title="@{gear-stored}" class="repeating_gear-stored">
+<table style='border-collapse: collapse; border-spacing: 0;'>
+    <!--  Invisible header row to keep the spacing of all the cells  -->
+    <tr class="sheet-default-header" style="visibility: collapse;">
+        <td>On<br>Mount</td>
+        <td>Description</td>
+        <td>Weight</td>
+        <td># Held</td>
+        <td>Location</td>
+    </tr>
     <tr>
-            <td> &nbsp;&nbsp;&nbsp;<input type="checkbox" name="attr_on-mount" title="@{repeating_gear-stored_$X_on-mount}" value="1" /><span></span>&nbsp;&nbsp;&nbsp;<input type="text" name="attr_gear-stored-desc" title="@{repeating_gear-stored_$X_gear-stored-desc}" placeholder="Item Name" class="sheet-middle"></td>
+            <td class="sheet-centering"><label><input type="checkbox" name="attr_on-mount" title="@{repeating_gear-stored_$X_on-mount}" value="1"/><span></span></label></td>
+            <td><input type="text" name="attr_gear-stored-desc" title="@{repeating_gear-stored_$X_gear-stored-desc}" placeholder="Item Name" class="sheet-middle"></td>
             <td><input type="text" name="attr_gear-stored-weight" title="@{repeating_gear-stored_$X_gear-stored-weight}" class="sheet-short" value="0"></td>
             <td><input type="number" name="attr_stored-qty" title="@{repeating_gear-stored_$X_stored-qty}" class="sheet-short" value="0"></td>
             <td><input type="text" name="attr_gear-stored-loc" title="@{repeating_gear-stored_$X_gear-stored-loc}" placeholder="Location" class="sheet-middle"/><input style="display: none;" name="mountgearweight" value="0"/></td>
     </tr>
-</table></fieldset>
+</table>
+</fieldset>
 <br><br><h4><b>Notes</b></h4><textarea name="attr_gearnotes" title="@{gearnotes}"></textarea><hr>
     </div></div>
 
