added missing attribute fields
missing fields in autocalc -> generated errors until attr_fields created via sheetworker.

--- a/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
@@ -45,6 +45,10 @@
 	<input type="radio" name="attr_tab" class="sheet-tab sheet-tab9" value="9" />
 	<span class="sheet-tab sheet-tab9" data-i18n="Konfiguration">Konfiguration</span>
 	<br>
+	<input style="display:none;" type="number" name="attr_AT_Aktiv_Parierwaffe" value="0"/>
+	<input style="display:none;" type="number" name="attr_TP_W_Aktiv_Parierwaffe" value="0"/>
+	<input style="display:none;" type="number" name="attr_FK_Aktiv_Waffe" value="0"/>
+
 
 	<div class="sheet-section sheet-section-Allgemein" align="center">
 			<input type="radio" name="attr_allgemein_tab" class="sheet-tab sheet-tab11" value="11" checked="checked"/>
@@ -18002,7 +18006,6 @@ on("change:le_spezies change:ko_wert change:vorteil_hohe_lebenskraft change:vort
 		else if (values.nachteil_niedrige_lebenskraft == 1) {
 			i -= parseInt(values.nachteil_niedrige_lebenskraft_stufe||0) ;
 		}	
-		console.log(parseInt(values.setze_lemax));
 	if (parseInt(values.setze_lemax) == 1) {
 		setAttrs({ LE_Grundwert: i, LE_Wert_max: i}) ;
 	} else {
@@ -18422,7 +18425,7 @@ on("change:schild_aktiv change:SchildAT1 change:SchildAT2 change:SchildAT3 chang
 	}); 
 });
 
-on("change:parierwaffe_aktiv change:parierwaffepamod1 change:parierwaffepamod2 change:parierwaffepamod3 change:parierwaffepamod4 change:parierwaffe_ausgeruestet change:parierwaffeat1 change:parierwaffeat2 change:parierwaffeat3 change:parierwaffeat4 change:parierwaffepa1 change:parierwaffepa2 change:parierwaffepa3 change:parierwaffepa4 change:parierwaffetp1_1 change:parierwaffetp1_2 change:parierwaffetp2_1 change:parierwaffetp2_2 change:parierwaffetp3_1 change:parierwaffetp3_2 change:parierwaffetp4_1 change:parierwaffetp4_2 change:parierwaffe1_sb change:parierwaffe2_sb change:parierwaffe3_sb change:parierwaffe4_sb", function() {
+on("sheet:opened change:parierwaffe_aktiv change:parierwaffepamod1 change:parierwaffepamod2 change:parierwaffepamod3 change:parierwaffepamod4 change:parierwaffe_ausgeruestet change:parierwaffeat1 change:parierwaffeat2 change:parierwaffeat3 change:parierwaffeat4 change:parierwaffepa1 change:parierwaffepa2 change:parierwaffepa3 change:parierwaffepa4 change:parierwaffetp1_1 change:parierwaffetp1_2 change:parierwaffetp2_1 change:parierwaffetp2_2 change:parierwaffetp3_1 change:parierwaffetp3_2 change:parierwaffetp4_1 change:parierwaffetp4_2 change:parierwaffe1_sb change:parierwaffe2_sb change:parierwaffe3_sb change:parierwaffe4_sb", function() {
 	getAttrs(["Parierwaffe_Aktiv", "ParierwaffePAMod1", "ParierwaffePAMod2", "ParierwaffePAMod3", "ParierwaffePAMod4", "parierwaffe_ausgeruestet", "ParierwaffeAT1", "ParierwaffeAT2", "ParierwaffeAT3", "ParierwaffeAT4", "ParierwaffePA1", "ParierwaffePA2", "ParierwaffePA3", "ParierwaffePA4", "ParierwaffeTP1_1", "ParierwaffeTP1_2", "ParierwaffeTP2_1", "ParierwaffeTP2_2", "ParierwaffeTP3_1", "ParierwaffeTP3_2", "ParierwaffeTP4_1", "ParierwaffeTP4_2", "Parierwaffe1_SB", "Parierwaffe2_SB", "Parierwaffe3_SB", "Parierwaffe4_SB"], function(values) {
 		if (values.parierwaffe_ausgeruestet == 1) {
 			var aktiv = values.Parierwaffe_Aktiv ;
