Fixed error on Critical Success rerolls or Critical Failure confirms of custom Lore and Creative skills

--- a/Fading Suns v2.75/Fading_Suns_v2.75.html
+++ b/Fading Suns v2.75/Fading_Suns_v2.75.html
@@ -1830,11 +1830,19 @@
                     refreshCscAndCfcRollButton(special_skill.section, `${special_skill.prefix}_csc`, `${special_skill.prefix}_cfc`);
                 });
             }
+
+            if(values.sheet_version == "1.1.0") {
+
+                // missed in the previous update, unfortunately
+                regular_repeating_skills.forEach( repeating_skill => {
+                    refreshCscAndCfcRollButton(repeating_skill.section, `${repeating_skill.prefix}_csc`, `${repeating_skill.prefix}_cfc`);
+                });
+            }
     
             // add future sheet migrations here
-            // if (values.sheet_version == "1.1.0") ...
+            // if (values.sheet_version == "1.1.1") ...
 
-            const latest_version = "1.1.0";
+            const latest_version = "1.1.1";
             
             if(values.sheet_version != latest_version) {
                 setAttrs({ sheet_version: latest_version });
