Added Sheet Styles

--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -1,4 +1,32 @@
-﻿<div class="sheet-wrapper">
+﻿<script type="text/javascript" src="script. js"></script>
+
+<script type="text/worker">
+	var styleCount = 5; // THIS NUMBER MUST BE EQUAL TO THE NUMBER OF COLOR SETTINGS
+	on("change:sheetstyle sheet:opened", function(event) {
+		console.log("changing style ",event);
+		var styleAttrs = {};
+
+		for(i = 0; i < styleCount; i++){
+			styleAttrs["styleset"+i]="off";
+		}
+		
+		console. log(styleAttrs);
+
+		getAttrs(["sheetstyle"] ,function(values) {
+			console.log(values);
+			var on = values.sheetstyle;
+			styleAttrs["styleset"+on]="on";
+			console. log(styleAttrs);
+			setAttrs(styleAttrs);
+		});
+	});
+</script>
+<input type="checkbox" name="attr_styleset0" class="color-setting color-setting-0" ></input> <!-- Used to activate the color setting rule, add one to add a new style, mind the numbering-->
+<input type="checkbox" name="attr_styleset1" class="color-setting color-setting-1" ></input>
+<input type="checkbox" name="attr_styleset2" class="color-setting color-setting-2" ></input>
+<input type="checkbox" name="attr_styleset3" class="color-setting color-setting-3" ></input>
+<input type="checkbox" name="attr_styleset4" class="color-setting color-setting-4" ></input>
+<div class="sheet-wrapper">
 	<!-- HIDDEN FIELDS -->
 	<input type="hidden" name="attr_10" value="10" disabled="disabled" />
 	<input type="hidden" name="attr_VS" value="vs:" disabled="disabled" />
@@ -5978,7 +6006,19 @@
         				<span>Mods to attributes do not increase derived stats</span>
         			</div>
 		        </div><!-- end stat modifier options -->
-		        
+		        <div class="option-container">
+		            <h4>Sheet Style</h4>
+		            <div>
+    		            <select name="attr_sheetstyle"/>
+						  <option value="0" selected="selected">Green</option> <!-- Color Style options, remember to add one to add a new option-->>
+						  <option value="1">Blue</option>
+						  <option value="2">Beige</option>
+						  <option value="3">Gray</option>
+						  <option value="4">Classic White</option>
+						</select>
+        				<span>Selects a visual style for the character sheet</span>
+    				</div>
+		        </div><!-- end style selector options -->
 			</div><!-- end option-column -->
 			
 		</div><!-- end options row -->
@@ -12955,6 +12995,7 @@ See notes for weapon.</textarea>
         });
         
 	});
+
 	
 	/* ====================== */
 	/*   TECHNIQUES REVISED   */
@@ -13042,4 +13083,4 @@ See notes for weapon.</textarea>
 
 	}
 
-</script</script>>
+</script>
