Updated all new functions to not trigger when minion type is selected
Previously, the calculation was thrown off for minion types - the fields were hidden and cleared, but the sheetworker still did his thing.
Not, sheetworker only does works for selected elements in regular char (non-minion).

--- a/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
@@ -17997,43 +17997,49 @@
 
 // rechne LE_Grundwert und LE_Wert_max
 on("change:le_spezies change:ko_wert change:vorteil_hohe_lebenskraft change:vorteil_hohe_lebenskraft_stufe change:nachteil_niedrige_lebenskraft change:nachteil_niedrige_lebenskraft_stufe change:le_zukauf sheet:opened", function() {
-	getAttrs(["setze_lemax", "LE_Spezies", "KO_Wert", "vorteil_hohe_lebenskraft", "vorteil_hohe_lebenskraft_stufe", "nachteil_niedrige_lebenskraft", "nachteil_niedrige_lebenskraft_stufe", "LE_Zukauf"], function(values) {
-	var i = 0 ;
-	i += parseInt(values.LE_Spezies) + (2 * parseInt(values.KO_Wert)) + parseInt(values.LE_Zukauf) ;
-		if (values.vorteil_hohe_lebenskraft == 1) {
-			i += parseInt(values.vorteil_hohe_lebenskraft_stufe||0) ;
-		}
-		else if (values.nachteil_niedrige_lebenskraft == 1) {
-			i -= parseInt(values.nachteil_niedrige_lebenskraft_stufe||0) ;
-		}	
-	if (parseInt(values.setze_lemax) == 1) {
-		setAttrs({ LE_Grundwert: i, LE_Wert_max: i}) ;
-	} else {
-		setAttrs({ LE_Grundwert: i }) ;
-	}
+	getAttrs(["gegner_sheet", "setze_lemax", "LE_Spezies", "KO_Wert", "vorteil_hohe_lebenskraft", "vorteil_hohe_lebenskraft_stufe", "nachteil_niedrige_lebenskraft", "nachteil_niedrige_lebenskraft_stufe", "LE_Zukauf"], function(values) {
+	if ( parseInt(values.gegner_sheet) != 1) {
+		var i = 0 ;
+		i += parseInt(values.LE_Spezies) + (2 * parseInt(values.KO_Wert)) + parseInt(values.LE_Zukauf) ;
+			if (values.vorteil_hohe_lebenskraft == 1) {
+				i += parseInt(values.vorteil_hohe_lebenskraft_stufe||0) ;
+			}
+			else if (values.nachteil_niedrige_lebenskraft == 1) {
+				i -= parseInt(values.nachteil_niedrige_lebenskraft_stufe||0) ;
+			}	
+		if (parseInt(values.setze_lemax) == 1) {
+			setAttrs({ LE_Grundwert: i, LE_Wert_max: i}) ;
+		} else {
+			setAttrs({ LE_Grundwert: i }) ;
+		} ;
+	} ;
 	});
 });
 
 //rechne KE_Grundwert und setze KE_Wert_max
 on("change:vorteil_geweihter change:ke_leiteigenschaft change:vorteil_hohe_karmalkraft change:vorteil_hohe_karmalkraft_stufe change:nachteil_niedrige_karmalkraft change:nachteil_niedrige_karmalkraft_stufe change:KE_Zukauf", function() {
-	getAttrs(["setze_kemax", "vorteil_geweihter", "KE_Leiteigenschaft", "vorteil_hohe_karmalkraft", "vorteil_hohe_karmalkraft_stufe", "nachteil_niedrige_karmalkraft", "nachteil_niedrige_karmalkraft_stufe", "KE_Zukauf"], function(values) {
-	var i = parseInt(values.vorteil_geweihter) * (20 + parseInt(values.KE_Leiteigenschaft) + (parseInt(values.vorteil_hohe_karmalkraft) * parseInt(values.vorteil_hohe_karmalkraft_stufe)) + (-1 * ( parseInt(values.nachteil_niedrige_karmalkraft) * parseInt(values.nachteil_niedrige_karmalkraft_stufe))) + parseInt(values.KE_Zukauf)) ;
-	if (values.setze_kemax == 1) {
-		setAttrs({ KE_Grundwert: i, KE_Wert_max: i }) ;
-	} else {
-		setAttrs({ KE_Grundwert: i }) ;	
+	getAttrs(["gegner_sheet", "setze_kemax", "vorteil_geweihter", "KE_Leiteigenschaft", "vorteil_hohe_karmalkraft", "vorteil_hohe_karmalkraft_stufe", "nachteil_niedrige_karmalkraft", "nachteil_niedrige_karmalkraft_stufe", "KE_Zukauf"], function(values) {
+	if ( parseInt(values.gegner_sheet) != 1) {	
+		var i = parseInt(values.vorteil_geweihter) * (20 + parseInt(values.KE_Leiteigenschaft) + (parseInt(values.vorteil_hohe_karmalkraft) * parseInt(values.vorteil_hohe_karmalkraft_stufe)) + (-1 * ( parseInt(values.nachteil_niedrige_karmalkraft) * parseInt(values.nachteil_niedrige_karmalkraft_stufe))) + parseInt(values.KE_Zukauf)) ;
+		if (values.setze_kemax == 1) {
+			setAttrs({ KE_Grundwert: i, KE_Wert_max: i }) ;
+		} else {
+			setAttrs({ KE_Grundwert: i }) ;	
+		}
 	}
 	});
 });
 
 //rechne AE_Grundwert und setze AE_Wert_max
 on("change:vorteil_zauberer change:ae_leiteigenschaft change:vorteil_hohe_astralkraft change:vorteil_hohe_astralkraft_stufe change:nachteil_niedrige_astralkraft change:nachteil_niedrige_astralkraft_stufe change:AE_Zukauf", function() {
-	getAttrs(["setze_aemax", "vorteil_zauberer", "AE_Leiteigenschaft", "vorteil_hohe_astralkraft", "vorteil_hohe_astralkraft_stufe", "nachteil_niedrige_astralkraft", "nachteil_niedrige_astralkraft_stufe", "AE_Zukauf"], function(values) {
-	var i = parseInt(values.vorteil_zauberer) * (20 + parseInt(values.AE_Leiteigenschaft) + (parseInt(values.vorteil_hohe_astralkraft) * parseInt(values.vorteil_hohe_astralkraft_stufe)) + (-1 * ( parseInt(values.nachteil_niedrige_astralkraft) * parseInt(values.nachteil_niedrige_astralkraft_stufe))) + parseInt(values.AE_Zukauf)) ;
-	if (values.setze_aemax == 1) {
-		setAttrs({ AE_Grundwert: i, AE_Wert_max: i }) ;
-	} else {
-		setAttrs({ AE_Grundwert: i }) ;	
+	getAttrs(["gegner_sheet", "setze_aemax", "vorteil_zauberer", "AE_Leiteigenschaft", "vorteil_hohe_astralkraft", "vorteil_hohe_astralkraft_stufe", "nachteil_niedrige_astralkraft", "nachteil_niedrige_astralkraft_stufe", "AE_Zukauf"], function(values) {
+	if ( parseInt(values.gegner_sheet) != 1) {	
+		var i = parseInt(values.vorteil_zauberer) * (20 + parseInt(values.AE_Leiteigenschaft) + (parseInt(values.vorteil_hohe_astralkraft) * parseInt(values.vorteil_hohe_astralkraft_stufe)) + (-1 * ( parseInt(values.nachteil_niedrige_astralkraft) * parseInt(values.nachteil_niedrige_astralkraft_stufe))) + parseInt(values.AE_Zukauf)) ;
+		if (values.setze_aemax == 1) {
+			setAttrs({ AE_Grundwert: i, AE_Wert_max: i }) ;
+		} else {
+			setAttrs({ AE_Grundwert: i }) ;	
+		}
 	}
 	});
 });
@@ -18041,17 +18047,20 @@ on("change:vorteil_zauberer change:ae_leiteigenschaft change:vorteil_hohe_astral
 
 // User darf selber schmerzstufe nicht via buttons ändern
 on("change:schmerz", function(eventInfo) {
-	if (eventInfo.sourceType == "player") {
-		var a = (parseInt(eventInfo.previousValue)||0) ;
-		setAttrs({ Schmerz: a }) ;
-	}
+	getAttrs(["gegner_sheet"], function(values) {
+		if (eventInfo.sourceType == "player" && parseInt(values.gegner_sheet) != 1) {
+			var a = (parseInt(eventInfo.previousValue)||0) ;
+			setAttrs({ Schmerz: a }) ;
+		}
+	});
 });
+
 
 
 // Check LE_Wert
 on("change:le_wert", function(eventInfo) {
-	getAttrs(["LE_Wert", "LE_Grundwert"], function(values) {
-		if (parseInt(values.LE_Wert||0) > parseInt(values.LE_Grundwert||0) && eventInfo.sourceType == "player") {
+	getAttrs(["gegner_sheet", "LE_Wert", "LE_Grundwert"], function(values) {
+		if (parseInt(values.LE_Wert||0) > parseInt(values.LE_Grundwert||0) && eventInfo.sourceType == "player" && parseInt(values.gegner_sheet) != 1) {
 			setAttrs({ LE_Wert: parseInt(values.LE_Grundwert||0) }) ;
 		}
 	});	
@@ -18059,8 +18068,8 @@ on("change:le_wert", function(eventInfo) {
 
 // Check LE_Grundwert change
 on("change:le_grundwert", function() {
-	getAttrs(["LE_Wert", "LE_Grundwert"], function(values) {
-		if (parseInt(values.LE_Wert||0) > parseInt(values.LE_Grundwert||0)) {
+	getAttrs(["gegner_sheet", "LE_Wert", "LE_Grundwert"], function(values) {
+		if (parseInt(values.LE_Wert||0) > parseInt(values.LE_Grundwert||0) && parseInt(values.gegner_sheet) != 1) {
 			setAttrs({ LE_Wert: parseInt(values.LE_Grundwert||0) }) ;
 		}
 	});	
@@ -18068,27 +18077,29 @@ on("change:le_grundwert", function() {
 
 //automatisch Schmerzstufe ermitteln
 on("change:le_wert change:le_grundwert change:vorteil_zaeher_hund change:nachteil_zerbrechlich change:schmerz_korr", function() {
-	getAttrs(["LE_Wert", "LE_Grundwert", "vorteil_zaeher_hund", "nachteil_zerbrechlich", "schmerz_korr"], function(values) {
-	var i, le, s1, s2, s3 ;
-	i = 0 ;
-	le = parseInt(values.LE_Wert) 																// = aktuelle Lebenspunkte, Usereingabe
-	s1 = parseInt(values.LE_Grundwert) - Math.round(parseInt(values.LE_Grundwert) * 0.25) ; 	//Schmerzschwelle 1
-	s2 = parseInt(values.LE_Grundwert) - Math.round(parseInt(values.LE_Grundwert) * 0.5) ;  	//Schmerzschwelle 2
-	s3 = parseInt(values.LE_Grundwert) - Math.round(parseInt(values.LE_Grundwert) * 0.75) ; 	//Schmerzschwelle 3
-	i = i + parseInt(values.schmerz_korr) ; 													//Korrekturwert, Usereingabe
-		if (le <= s1) { 
-			i++ ; 
-		}	if (le <= s2) {
-			i++ ;
-		} 	if (le <= s3) {
-			i++;
-		} 	if (le <= 5) {
-			i++;
-		} 	if (values.nachteil_zerbrechlich == 1 && i > 0) { 									//wenn schmerz > 0, addiere Nachteil Zerbrechlich
-			i++ ;
-		}
-	i = Math.min(Math.max(parseInt(i), 0), 4) ;
-		setAttrs({ Schmerz: i }) ;
+	getAttrs(["gegner_sheet", "LE_Wert", "LE_Grundwert", "vorteil_zaeher_hund", "nachteil_zerbrechlich", "schmerz_korr"], function(values) {
+	if ( parseInt(values.gegner_sheet) != 1) {	
+		var i, le, s1, s2, s3 ;
+		i = 0 ;
+		le = parseInt(values.LE_Wert) 																// = aktuelle Lebenspunkte, Usereingabe
+		s1 = parseInt(values.LE_Grundwert) - Math.round(parseInt(values.LE_Grundwert) * 0.25) ; 	//Schmerzschwelle 1
+		s2 = parseInt(values.LE_Grundwert) - Math.round(parseInt(values.LE_Grundwert) * 0.5) ;  	//Schmerzschwelle 2
+		s3 = parseInt(values.LE_Grundwert) - Math.round(parseInt(values.LE_Grundwert) * 0.75) ; 	//Schmerzschwelle 3
+		i = i + parseInt(values.schmerz_korr) ; 													//Korrekturwert, Usereingabe
+			if (le <= s1) { 
+				i++ ; 
+			}	if (le <= s2) {
+				i++ ;
+			} 	if (le <= s3) {
+				i++;
+			} 	if (le <= 5) {
+				i++;
+			} 	if (values.nachteil_zerbrechlich == 1 && i > 0) { 									//wenn schmerz > 0, addiere Nachteil Zerbrechlich
+				i++ ;
+			}
+		i = Math.min(Math.max(parseInt(i), 0), 4) ;
+			setAttrs({ Schmerz: i }) ;
+	}
 	});
 });
 
