--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -1,4 +1,4 @@
-<script type="text/worker">
+﻿<script type="text/worker">
 	var styleCount = 5; // THIS NUMBER MUST BE EQUAL TO THE NUMBER OF COLOR SETTINGS
 	on("change:sheetstyle sheet:opened", function(event) {
 		console.log("changing style ",event);
@@ -84,7 +84,7 @@
 	<div class="sheet-tab1">
 
 		<!-- _____ _____ ATTRIBUTE BOX _____ _____ -->
-		<div class="box attribute">
+		<div class="box attribute" style="float: left;">
 			<div class="table">
 				<div class="header">
 					<div class="cell col0">Attributes</div>
@@ -760,7 +760,7 @@
 
 		<div class="tab1-column2">
 
-			<div class="hp-lift-container">
+			<div class="hp-lift-container" style="float: left; width:186px">
 
 				<!-- HP, FP, ER, and Custom Pools -->
 				<div class="box stats">
@@ -1857,7 +1857,7 @@
 		</div><!-- tab1-column2 -->
 
 		<!-- _____ _____ POINT SUMMARY BOX _____ _____ -->
-		<div class="sheet-box sheet-points" >
+		<div class="sheet-box sheet-points" style="float: left;">
 			<div class="sheet-table">
 			    <input type="hidden" name="attr_toggle_unspent_points" class="sheet-toggle-unspoint-points" value="0" />
 				<div class="sheet-header">
@@ -6168,17 +6168,6 @@
 	
 	<ul>
 		<li>Changes, Fixes, and Adds made by Mike W (UserID: 1414610)</li>
-		<li>Fixed the placement of some ToolTips – Cosmetic Only</li>
-		<li>Changed the Vitals DR default value to “See Torso”. This will NOT override current entry.</li>
-		<li>Added a Title to the Highlight Row Checkboxes to indicate what the checkbox is for. Inspired by Jared (UserID: 1026445) – Cosmetic Only.</li>
-	</ul>
-	
-	<h4>Version 2.2.3</h4>
-	
-	<p>Pull Request: 03/03/2020</p>
-	
-	<ul>
-		<li>Changes, Fixes, and Adds made by Mike W (UserID: 1414610)</li>
 		<li>Added some new ToolTips – Cosmetic Only.</li>
 		<li>Changed width of Weapon and Damage Notes fields, under Melee and Raged Attacks, to be more readable – Cosmetic Only.</li>
 		<li>General Tab. Remove checkbox for whispering Perception. Default behavior is only player and game master can see the roll. 
@@ -7872,7 +7861,6 @@ If you're using an unarmed parry, attacker may choose to hit the original target
 	// type="text/worker"
 
 	var noop = function () {}; // do nothing callback function.
-
 
 	var version = "2.3.1";
 
@@ -13696,7 +13684,6 @@ If you're using an unarmed parry, attacker may choose to hit the original target
         });
         
 	});
-
 	
 	/* ====================== */
 	/*   TECHNIQUES REVISED   */
